apps/dex/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex
  namespace: dex
spec:
  hosts:
    - "dex.cluster.sciops.net"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - headers:
        request:
          set:
            X-Forwarded-Port: "443"
      route:
        - destination:
            port:
              number: 5556
            host: dex.dex.svc.cluster.local
